--- a/src/_blocks.scss
+++ b/src/_blocks.scss
@@ -72,8 +72,8 @@ a:hover > .bullet-container .bullet {
 	background-color: var(--ls-primary-background-color);
 	width: 1rem;
 	height: 1rem;
-	margin-left: 2px;
-	margin-top: 2px;
+	margin-left: 0;
+	margin-top: 0;
 	box-shadow: 0 0 4px 2px var(--ls-primary-background-color);
 }
 
