--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -41,8 +41,8 @@
 }
 
 :root {
-	--ct-text-size: 16px;
-	--ct-line-height: 1.6;
+	--ct-text-size: 17px;
+	--ct-line-height: 1.5;
 	--ls-font-family: "Only Emoji", "Source Sans Pro", sans-serif;
 	--ct-page-title-font-family: var(--ls-font-family);
 	--ct-block-ref-font-family: var(--ct-page-title-font-family);
