--- a/src/_theme_dark.scss
+++ b/src/_theme_dark.scss
@@ -10,14 +10,14 @@ html[data-theme="dark"] {
 	--ct-success-color: #0dcf82;
 	--ct-highlight-color: #ffc600;
 
-	--color-level-1: #313942;
-	--color-level-2: #38434c;
-	--color-level-3: #404b55;
-	--color-level-4: #525f6b;
-	--color-level-5: #606e7a;
-	--color-level-6: #697885;
+	--color-level-1: #20262c;
+	--color-level-2: #293138;
+	--color-level-3: #2f373f;
+	--color-level-4: #3d4750;
+	--color-level-5: #4b565f;
+	--color-level-6: #55616c;
 
-	--ls-primary-background-color: #1f2126;
+	--ls-primary-background-color: #131518;
 	--ls-secondary-background-color: var(--color-level-1);
 	--ls-tertiary-background-color: var(--color-level-2);
 	--ls-quaternary-background-color: var(--color-level-3);
